delete comment fuctionality added
