# routes/postRoutes.js
@@ -1,6 +1,6 @@
 const express =require("express");
 const verifyToken = require("../middleware/verifyToken");
-const { createPost, getAllPosts, addComment, getComments, deletePost } = require("../controllers/blogController");
+const { createPost, getAllPosts, addComment, getComments, deletePost, deleteComment } = require("../controllers/blogController");
 
 const postRoute=express.Router();
 
@@ -10,7 +10,7 @@ postRoute.get("/getAllPosts",verifyToken,getAllPosts);
 postRoute.post("/addComment",verifyToken,addComment)
 postRoute.get("/getComments/:id",verifyToken,getComments);
 postRoute.delete("/deletePost/:id",verifyToken,deletePost)
-postRoute.post("/uploadImage",verifyToken);
+postRoute.delete("/deleteComment/:id",verifyToken,deleteComment)
 
 
 module.exports=postRoute;
